--- a/soundplayer/pubspec.yaml
+++ b/soundplayer/pubspec.yaml
@@ -36,8 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  audioplayers: ^4.1.0
   just_audio: ^0.9.34
+  file_picker: ^5.3.2
+  file_manager: ^1.0.2
+  permission_handler: ^10.4.3
+  path_provider: ^2.0.15
+  on_audio_query: ^2.9.0
 
 dev_dependencies:
   flutter_test:
