--- a/soundplayer/pubspec.yaml
+++ b/soundplayer/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^10.4.3
   path_provider: ^2.0.15
   on_audio_query: ^2.9.0
+  flutter_local_notifications: ^15.1.0+1
 
 dev_dependencies:
   flutter_test:
